--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jianbing Huang
+title: Jianbing Huang (Learner)
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Jianbing Huang!</h1>
