--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Who am I
 ---
 <div class="about">
-<p> I am an mathematician who loves beautiful intrinsics of our nature as revealed by mathematics, and a software engineer who loves producing clear, concise, and elegant software that can have general impact to the real world. </p>
+<p> I am an mathematician who loves beautiful intrinsics of our nature, and a software engineer who loves producing clear, concise, general, and extensible software that has broad impact to the real world. </p>
 </div><!-- /.about -->
