--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Jianbing Huang
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Jianbing Huang!</h1>
-	<p>I am learning to write blogs here about technical subjects such as <em>Geometry and Computation</em>. <a href="/about">Read more about my life...</a></p>
+	<p>I am a software engineer who has interests on a diverse range of technical subjects such as <em>Geometric Computation, Information Compression, and Machine Learning</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
