--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: default
 title: Jianbing Huang
+cv: passive
+blog: passive
 ---
 <div class="blurb">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Jianbing Huang" src="img/jhuang.png">
+	</div>	
 	<h1>Hi there, I'm Jianbing Huang!</h1>
 	<p>I am a software engineer who has interests on a diverse range of technical subjects such as <em>Geometric Computation, Information Compression, and Machine Learning</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
