--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ cv: passive
 blog: passive
 ---
 
-<img src="img/jhuang.png" width="600" height="451">
+<img src="img/jhuang-family.png" width="600" height="451">
 <h1>Hi there, I'm Jianbing Huang!</h1>
 <p>I am a software engineer who has interests on a diverse range of technical subjects such as <em>Geometric Computation, Information Compression, and Machine Learning</em>. <a href="/about">Read more about my life...</a></p>
