--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Jianbing Huang
 ---
 
-<img src="img/Milky.JPG?raw=true">
+<img src="img/cruise-family.jpg?raw=true">
 <h1>Hi there, I'm Jianbing Huang!</h1>
 <p>I am a software engineer who has interests on a diverse range of technical subjects such as <em>Geometric Computation, Information Compression, and Machine Learning</em>. <a href="/about">Read more about my life...</a></p>
