--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Who am I
 ---
 <div class="about">
-    <p> I am a software engineer who enjoys writing clear, concise, general, and extensible software that has broad impacts, and a mathematician who loves learning and discovering intrinsic rules that govern the natural world we live in. </p>
+    <p> I am a software engineer professional who enjoys writing clear, concise, general, and extensible software that has broad impacts, and a mathematician who loves learning and discovering intrinsic rules that govern the natural world we live in. </p>
 </div><!-- /.about -->
